--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "body-parser": "^1.14.1",
     "express": "~3.4.4",
     "mongoose": "^4.2.4",
-    "node-uuid": "^1.4.4"
+    "multer": "^1.1.0",
+    "node-uuid": "^1.4.4",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
