--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "express": "~3.4.4",
     "mongoose": "^4.2.4",
