--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "twit": "latest",
     "bluebird": "^3.0.5",
+    "nodemon": "latest",
     "body-parser": "^1.14.1",
+    "ejs": "^2.3.4",
     "express": "~3.4.4",
     "mongoose": "^4.2.4",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.4",
+    "method-override": "latest",
     "q": "^1.4.1"
   },
   "devDependencies": {},
