--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "twit": "latest",
     "bluebird": "^3.0.5",
-    "nodemon": "latest",
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
     "express": "~3.4.4",
+    "method-override": "latest",
     "mongoose": "^4.2.4",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.4",
-    "method-override": "latest",
-    "q": "^1.4.1"
+    "nodemon": "latest",
+    "oauth": "^0.9.14",
+    "passport": "^0.3.2",
+    "passport-twitter": "^1.0.3",
+    "q": "^1.4.1",
+    "twit": "latest"
   },
   "devDependencies": {},
   "bundleDependencies": [],
