--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "q": "^1.4.1",
     "twit": "latest"
   },
-  "devDependencies": {"bower": "1.2.x"},
+  "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
   "main": "server.js"
