--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "q": "^1.4.1",
     "twit": "latest"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    
+  },
   "bundleDependencies": [],
   "private": true,
   "main": "server.js"
