--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "q": "^1.4.1",
     "twit": "latest"
   },
-  "devDependencies": {
-    
-  },
+  "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
   "main": "server.js"
