--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-progress-button-styles": "~0.0.1",
     "angular-translate": "~2.7.0",
     "angular-translate-loader-url": "~2.7.0",
-    "angular-translate-loader-static-files": "~2.7.0"
+    "angular-translate-loader-static-files": "~2.7.0",
+    "angular-route": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
