--- a/public/bower.json
+++ b/public/bower.json
@@ -2,7 +2,7 @@
   "name": "OpenShift-Sample-App",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "angular": "1.2.15",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
@@ -27,13 +27,14 @@
     "angular-progress-button-styles": "~0.0.1",
     "angular-translate": "~2.7.0",
     "angular-translate-loader-url": "~2.7.0",
-    "angular-translate-loader-static-files": "~2.7.0"
+    "angular-translate-loader-static-files": "~2.7.0",
+    "angular-route": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
   },
   "resolutions": {
-    "angular": "^1.3.14",
+    "angular": "1.2.15",
     "jquery": ">=1.6",
     "webcomponentsjs": "~0.5.4"
   }
