--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "async": "^1.5.0",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "debug": "^2.2.0",
     "ejs": "^2.3.4",
     "express": "~3.4.4",
     "express-session": "^1.12.1",
@@ -44,6 +45,7 @@
     "passport-twitter": "^1.0.3",
     "q": "^1.4.1",
     "serve-favicon": "^2.3.0",
+    "socket.io": "^1.3.7",
     "twit": "latest"
   },
   "devDependencies": {},
