--- a/public/bower.json
+++ b/public/bower.json
@@ -28,7 +28,8 @@
     "angular-translate": "~2.7.0",
     "angular-translate-loader-url": "~2.7.0",
     "angular-translate-loader-static-files": "~2.7.0",
-    "angular-route": "~1.4.8"
+    "angular-route": "~1.4.8",
+    "jqcloud2": "2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
