--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.3",
     "q": "^1.4.1",
+    "pubnub": "^3.6.7",
+    "moment": "^2.8.2",
     "serve-favicon": "^2.3.0",
+    "sentiment": "^1.0.1",
     "socket.io": "^1.3.7",
     "twit": "latest"
   },
